# drone_project

./: .gitattributes  README.md  ee478.yaml  path_optimize.py  route_planner.py
control/: CMakeLists.txt  package.xml
control/launch/: plan_control.launch
control/scripts/: route_planner.py  route_planner_2.py  route_planner_final.py  velocity_control.py
ee478/apriltag_ros/apriltag_ros/config/: tags.yaml
gpt_api/: CMakeLists.txt  package.xml
gpt_api/launch/: goal_selector.launch
gpt_api/scripts/: comb_localization.py  goal_selector.py  goal_selector_vision.py  gpt_client.py  gpt_server.py  gpt_vision_server.py
gpt_api/srv/: GPTImageQuery.srv
localization/apriltag_tf/: CMakeLists.txt  package.xml
localization/apriltag_tf/include/: apriltag_tf.hpp
localization/apriltag_tf/src/: apriltag_tf copy.cpp  apriltag_tf.cpp  apriltag_tf_node.cpp
localization/ekf_fusion/: CMakeLists.txt  package.xml
localization/ekf_fusion/include/: ekf.hpp  ekf_node.hpp  ekf_so3.hpp
localization/ekf_fusion/launch/: ekf_node.launch
localization/ekf_fusion/src/: ekf.cpp  ekf_error.cpp  ekf_node.cpp  ekf_quaternion.cpp  ekf_so3.cpp
offboard_control/: CMakeLists.txt  package.xml
offboard_control/launch/: plan_control.launch
offboard_control/scripts/: optimize_path.ipynb  route_planner.py  velocity_control.py
optimization/: optimize_path.ipynb
